# snowflip

./: MANIFEST.in  README.md  config_template.env  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py
snowflip/: __init__.py  cli.py  client.py  connection.py  datasets.py  exceptions.py
